--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         </tr>
     </tbody></table> 
 </div>
-    <h3>Demo for extremly long audio</h3>
+    <h3>Demo for extremely long audio</h3>
 
         “Beyond the newspapers and magazines and an occasional novel of the hour, idly taken up and indifferently put aside, it has no literary needs. With this listless multitude we have not to concern ourselves, but rather with  that sufficiently heterogeneous body known as the reading public, the people for whom Mr. Carnegie builds libraries, and the publishers display their wares. Of course, among these there must necessarily be a considerable percentage temperamentally unappreciative of poetry, — just as there are numbers of people born with no ear for music, and numbers, again, born with no color-sense. The lover of poetry is no less born than the poet himself. Yet, as the poet is made as well as born, so is his reader; and there are many who really love poetry without knowing it, but who think they do not care for it, — either because they have contracted a wrong notion of what poetry is, or because they have some time or other made a bad start with the wrong kind.”
         <table><tbody><tr>
